syntax = "proto3";

// Required by protoc to generate code
option go_package = "github.com/KeatonBrink/MancalaGame/src/protos";
package mancala;

service MancalaService {
    rpc GameHandshake(HandshakeRequest) returns (HandshakeResponse);
    rpc MakeMove(MoveRequest) returns (MoveResponse);
    rpc RequestUpdate(UpdateRequest) returns (UpdateResponse);
}

message HandshakeRequest {
    string userName = 1;
}

message HandshakeResponse {
    string message = 1;
}


message MoveRequest {
    int32 pitIndex = 1;
    string userHash = 2;
}

message MoveResponse {
    string message = 1;
    string board = 2;
}

message UpdateRequest {
    string userHash = 1;
}

message UpdateResponse {
    string message = 1;
    string board = 2;
}